maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: value unary_! is not a member of Int
            if (! getIndication(i+1,j) && ! aMurOuest(i+1,j)) {
                ^JediEscaper:14: error: value unary_! is not a member of Int
            } else if (!getIndication(i-1,j) && !aMurOuest(i-1,j)){
                       ^JediEscaper:16: error: value unary_! is not a member of Int
            }else if (!getIndication(i,j+1) && !aMurNord(i,j+1)){
                      ^JediEscaper:18: error: value unary_! is not a member of Int
            }else if (!getIndication(i,j-1) && !aMurNord(i,j)){
                      ^JediEscaper:34: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<-0 to getMondeLargeur()-1){
        ^